--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: brush
 channels:
     - conda-forge
 dependencies:
-    - python #=3.8.2
+    - python=3.8.2
     - cmake #=3.18.*
     - eigen #=3.4.*
     - fmt
@@ -10,7 +10,7 @@ dependencies:
     - gxx >= 12.0
     - ninja
     - ceres-solver
-    - pybind11 #=2.6.2
+    - pybind11=2.6.2
     - pytest #=6.2.4
     - pydot
     - scikit-learn
