--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
     - gxx >= 12.0
     - ninja
     - ceres-solver
+    - taskflow
     - pybind11 #=2.6.2
     - pytest #=6.2.4
     - pydot
