--- a/environment.yml
+++ b/environment.yml
@@ -9,7 +9,7 @@ dependencies:
     - gcc >= 12.0
     - gxx >= 12.0
     - ninja
-    - ceres-solver
+    - ceres-solver=2.1.0
     - taskflow
     - pybind11 #=2.6.2
     - pytest #=6.2.4
