Fixing some versions to solve github actions not able to install

--- a/environment.yml
+++ b/environment.yml
@@ -2,15 +2,15 @@ name: brush
 channels:
     - conda-forge
 dependencies:
-    - python=3.8.2
+    - python>=3.9 #=3.8.2
     - cmake #=3.18.*
     - eigen #=3.4.*
     - fmt
     - gcc >= 12.0
     - gxx >= 12.0
     - ninja
-    - ceres-solver
-    - pybind11=2.6.2
+    - ceres-solver=2.1.0
+    - pybind11>=2.6.2
     - pytest #=6.2.4
     - pydot
     - scikit-learn
