--- a/environment.yml
+++ b/environment.yml
@@ -11,6 +11,7 @@ dependencies:
     - ninja
     - ceres-solver=2.1.0
     - pybind11>=2.6.2
+    - taskflow
     - pytest #=6.2.4
     - pydot
     - scikit-learn
