--- a/environment.yml
+++ b/environment.yml
@@ -12,6 +12,7 @@ dependencies:
     - ceres-solver=2.1.0
     - pybind11>=2.6.2
     - taskflow
+    - boost-cpp
     - pytest #=6.2.4
     - pydot
     - scikit-learn
