Fixed boost-cpp version (newer version is breaking)

--- a/environment.yml
+++ b/environment.yml
@@ -10,9 +10,9 @@ dependencies:
     - gxx >= 12.0
     - ninja
     - ceres-solver=2.1.0
+    - boost-cpp=1.82.0
     - pybind11>=2.6.2
     - taskflow
-    - boost-cpp
     - pytest #=6.2.4
     - pydot
     - scikit-learn
