--- a/environment.yml
+++ b/environment.yml
@@ -1,12 +1,13 @@
-name: brush
+name: brush2
 channels:
     - conda-forge
 dependencies:
+    # TODO: try to relax dependencies versions
     - python>=3.9 #=3.8.2
     - cmake #=3.18.*
     - eigen #=3.4.*
     - fmt
-    - gcc >= 12.0
+    - gcc<=13.2.0
     - gxx >= 12.0
     - ninja
     - ceres-solver=2.1.0
