--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,10 +20,10 @@ jobs:
         uses: actions/checkout@v3
       - 
         name: Mamba Environment
-        uses: mamba-org/provision-with-micromamba@main
+        uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: environment.yml
-          cache-env: true
+          cache-environment: true
           cache-downloads: true
       - 
         name: Install
@@ -53,10 +53,10 @@ jobs:
         uses: actions/checkout@v3
       - 
         name: Mamba Environment
-        uses: mamba-org/provision-with-micromamba@main
+        uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: environment.yml
-          cache-env: true
+          cache-environment: true
           cache-downloads: true
       - 
         name: Install
