--- a/environment.yml
+++ b/environment.yml
@@ -6,8 +6,9 @@ dependencies:
     - cmake #=3.18.*
     - eigen #=3.4.*
     - fmt
-    - gcc >= 12.0
-    - gxx >= 12.0
+    - cxx-compiler
+    # - gcc >= 12.0
+    # - gxx >= 12.0
     - ninja
     - ceres-solver=2.1.0
     - pybind11>=2.6.2
