fix mamba test CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+
 name: install, test, docs
 on: [push, pull_request]
 
@@ -20,10 +21,10 @@ jobs:
         uses: actions/checkout@v3
       - 
         name: Mamba Environment
-        uses: mamba-org/provision-with-micromamba@main
+        uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: environment.yml
-          cache-env: true
+          cache-environment: true
           cache-downloads: true
       - 
         name: Install
@@ -53,10 +54,10 @@ jobs:
         uses: actions/checkout@v3
       - 
         name: Mamba Environment
-        uses: mamba-org/provision-with-micromamba@main
+        uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: environment.yml
-          cache-env: true
+          cache-environment: true
           cache-downloads: true
       - 
         name: Install
