--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,12 @@
         "CONDA_LIB": "${env:CONDA_PREFIX}/lib/"
     },
     "files.associations": {
+        "*.json.liquid": "json",
+        "*.yaml.liquid": "yaml",
+        "*.md.liquid": "markdown",
+        "*.js.liquid": "liquid-javascript",
+        "*.css.liquid": "liquid-css",
+        "*.scss.liquid": "liquid-scss",
         "type_traits": "cpp",
         "string": "cpp",
         "cmath": "cpp",
@@ -68,7 +74,10 @@
         "stop_token": "cpp",
         "jacobi": "cpp",
         "random": "cpp",
-        "mutex": "cpp"
+        "mutex": "cpp",
+        "__bit_reference": "cpp",
+        "__node_handle": "cpp",
+        "locale": "cpp"
     },
     "python.testing.pytestArgs": [
         "tests"
