--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
         run: | 
           micromamba env list
           export CMAKE_BUILD_PARALLEL_LEVEL=4
-          pip install .
+          pip install '.[test]' # Installing with the optional dependencies
       - 
         name: Test Import
         run: |
