--- a/environment.yml
+++ b/environment.yml
@@ -27,6 +27,6 @@ dependencies:
     - sphinx
     - pip:
       - graphviz
-      - deap # TODO: deap optional
-      - pmlb
+      # - deap # optional
+      # - pmlb # used only for testing
       
