--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,10 @@ requires = [
     "sphinx",
     "pybind11",
     "maisie_sphinx_theme",
+    "sphinx-copybutton",
+    "sphinx_math_dollar",
+    "sphinx-rtd-theme",
+    "myst-nb",
     "breathe"
 ]
 build-backend = "scikit_build_core.build"
@@ -26,8 +30,13 @@ license = { text = "GPL-3.0-or-later" }
 requires-python = ">=3.8"
 [project.optional-dependencies]
 docs = [
+    "numpydoc",
     "sphinx_rtd_theme",
+    "sphinx-copybutton",
+    "sphinx-rtd-theme",
+    "sphinx_math_dollar",
     "maisie_sphinx_theme",
+    "myst-nb",
     "breathe"
 ]
 test = [
