--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,9 @@ endif()
 if (MACOSX)
     set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp=libgomp -fexperimental-library")
     set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp=libgomp -fexperimental-library")
+    if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+        add_compile_definitions(_LIBCPP_DISABLE_AVAILABILITY)
+    endif()
 endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-ignored-attributes")
